<resources>
    <string name="app_name">CAR-RENTAL</string>
    <string-array name="sippener">
        <item>NUMBER OF SEATS</item>
        <item>4</item>
        <item>7</item>
    </string-array>
    <string-array name="LIST">
        <item>Number of cars not rented</item>
        <item>Number for all cars whose insurance expires today</item>
    </string-array>
    <string name="title_activity_main_for_user">MainActivityForUser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reservation_form">ReservationForm</string>
    <string name="tab_text_1">Full Details Reservation</string>
    <string name="tab_text_2">Payment Details</string>
    <!--  Strings used for fragments for navigation  -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim. </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="brand_model">Brand/Model</string>
    <string name="color">color:</string>
    <string name="total_cost">Total Cost :</string>
    <string name="enter_your_visa_id">Enter your Visa ID</string>
    <string name="total_price">Total Price:</string>
    <string name="select_your_start_date">select your start date</string>
    <string name="select_your_end_date">select your end date</string>
    <string name="my_reservations">My Reservations</string>
    <string name="search_location_instead">Search location instead?</string>
    <string name="balance">Balance</string>
    <string name="booking">Booking</string>
    <string name="please_check_your_balance">Please check your balance</string>
    <string name="rydi_your_best_friend">RYDI Your Best Friend</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="appname">indivisual_work</string>
    <string name="car_id">"car id : "</string>
    <string name="approve_to_rent_a_acr_to_the_costumer">approve to rent a acr to the costumer</string>
    <string name="contract_id">Contract ID</string>
    <string name="username">Username</string>
    <string name="d">Car ID</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="visa_id">Visa ID</string>
    <string name="number_of_days_to_booking">Number of Days to Booking</string>
    <string name="approv_request">Approv request</string>
    <string name="dis_approved">dis Approved</string>
    <string name="car_details">Car Details</string>
    <string name="search_query">Search query</string>
    <string name="model">Model</string>
    <string name="color1">Color</string>
    <string name="brand">Brand</string>
    <string name="car_idd">Car ID</string>
    <string name="pricee">Price</string>
</resources>