<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AD9FC1"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"

            style="@style/titleapproved"


            android:text="@string/approve_to_rent_a_acr_to_the_costumer"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="11dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contractIdView"
                style="@style/approvedstyle"
                android:text="@string/contract_id"
                />

            <TextView
                android:id="@+id/usernameView"
                style="@style/approvedstyle2"
                android:text="@string/username" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="11dp">

            <TextView
                android:id="@+id/carIdView"
                style="@style/approvedstyle"
                android:text="@string/d"
                />

            <TextView
                android:id="@+id/startDateView"
                style="@style/approvedstyle2"
                android:text="@string/start_date"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="11dp">

            <TextView
                android:id="@+id/endDateView"
                style="@style/approvedstyle"
                android:text="@string/end_date"
                />

            <TextView
                android:id="@+id/priceView"
                style="@style/approvedstyle2"
                android:text="@string/price"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="11dp">

            <TextView
                android:id="@+id/paymentStatusView"
                style="@style/approvedstyle"
                android:text="@string/status"
                />

            <TextView
                android:id="@+id/visaIdView"
                style="@style/approvedstyle2"
                android:text="@string/visa_id"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/daynumber"
            style="@style/number"
            android:text="@string/number_of_days_to_booking"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="11dp">

            <Button
                android:id="@+id/approvedButton"
                style="@style/approvedstylebutton"
                android:text="@string/approv_request"
                />

            <Button
                android:id="@+id/disapprovedButton"

                style="@style/approvedstylebutton2"
                android:text="@string/dis_approved"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
