<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_car_id"
        android:text="@string/car_idd"
        style="@style/stylesearch"
        />

    <TextView
        android:id="@+id/tv_brand"
        android:text="@string/brand"
        style="@style/stylesearch" />

    <TextView
        android:id="@+id/tv_color"
        android:text="@string/color"

        style="@style/stylesearch" />

    <TextView
        android:id="@+id/tv_model"
        android:text="@string/model"
        style="@style/stylesearch" />

    <TextView
        android:id="@+id/tv_price"
        android:text="@string/pricee"

        style="@style/stylesearch" />

    <TextView
        android:id="@+id/tv_seatnumber"
        android:text="@string/color"

        style="@style/stylesearch" />

    <TextView
        android:id="@+id/tv_date"
        android:text="@string/model"
        style="@style/stylesearch" />

    <TextView
        android:id="@+id/tv_location"
        android:text="@string/pricee"

        style="@style/stylesearch" />

</LinearLayout>